# cross-contract-ink-example

./: Cargo.toml  README.md
flipper/: Cargo.toml  lib.rs
other_flipper/: Cargo.toml  lib.rs
scripts/: build.sh
